--- a/HW_16_1/style.css
+++ b/HW_16_1/style.css
@@ -1,10 +1,24 @@
 * {
   box-sizing: border-box;
   font-family: sans-serif;
+  outline: none;
+}
+body {
+  width: 300px;
+  margin: 50px auto;
+  position: relative;
+}
+img {
+  margin: 0 auto;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 select#citySelect {
-  padding: 10px 20px;
-  margin: 0 auto 20px auto;
+  width: 60%;
+  padding: 10px 5px;
+  margin: 0 0 30px 0;
   display: block;
 }
 p {
