--- a/calendly_clone/src/App.css
+++ b/calendly_clone/src/App.css
@@ -12,3 +12,10 @@ form>div{
 form>div:last-child{
   margin: 0;
 }
+
+.user-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:20px;
+}
